--- a/index.html
+++ b/index.html
@@ -11,7 +11,19 @@
         <main>
             <section id="preview">
                 <p><a href="#">Download Excursion (Coming soon!)</a></p>
+                <video autoplay="" muted="" loop="">      
+                    <source src="resources/videos/excursion.mp4" type="video/mp4">
+                    Unable to load video.
+                </video>
+            </section>
+            <section id="travel">
+                <h2>Your personal travel guide</h2>
+                <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+                <p><img src="resources/images/camp.jpg" alt="a campsite at night"></p>
+                <p><img src="resources/images/phone.webp" alt="a cellphone icon"></p>
+                <p><a href="#">Download Excursion (Coming soon!)</a></p>
             </section>
         </main>
+        <footer>© Excursion</footer>
     </body>
 </html>
