--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@
                 <h2>Your personal travel guide</h2>
                 <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
                 <p><img src="resources/images/camp.jpg" alt="a campsite at night"></p>
+            </section>
+            <section id="platforms">
                 <p><img src="resources/images/phone.webp" alt="a cellphone icon"></p>
+                <h2>Coming soon for iPhone and Android</h2>
                 <p><a href="#">Download Excursion (Coming soon!)</a></p>
             </section>
         </main>
