placed footer in p tag

--- a/index.html
+++ b/index.html
@@ -27,6 +27,6 @@
                 <p><a href="#">Download Excursion (Coming soon!)</a></p>
             </section>
         </main>
-        <footer>© Excursion</footer>
+        <footer><p>© Excursion</p></footer>
     </body>
 </html>
